add logging to task and comment services, update views for task actions, and configure logging settings

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ DB_PORT=5432
 # JWT
 JWT_ACCESS_TOKEN_LIFETIME_MINUTES=60
 JWT_REFRESH_TOKEN_LIFETIME_DAYS=7
+
+# Logging
+LOG_LEVEL=INFO
+DJANGO_LOG_LEVEL=INFO
