--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     command: gunicorn --bind 0.0.0.0:8000 --workers 1 --reload --log-level debug config.wsgi:application
     volumes:
       - .:/app
+      - logs:/app/logs
     ports:
       - "8000:8000"
     env_file:
