--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,22 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
-addopts = --reuse-db --nomigrations -v
+python_classes = Test*
+python_functions = test_*
+testpaths = tests
+
+addopts =
+    --reuse-db
+    --create-db
+    -v
+    --tb=short
+    --strict-markers
+    --cov=apps
+    --cov-report=html
+    --cov-report=term-missing
+    --cov-fail-under=80
+
+markers =
+    integration: Integration tests that require database
+    unit: Unit tests that don't require database
+    slow: Slow running tests
